# axonops-cqlsh-binary

./: .gitignore  LICENSE  Makefile.in  Makefile.win  README.md  axonops-cqlsh.nsi  configure  configure.ac  cqlsh.c  cqlsh.py  main_wrapper.c  package.sh  setup_build.py  sources.txt
.github/workflows/: mac13.yml  release.yml  static.yml
cassandra/: cluster.py  connection.py  cqltypes.py  deserializers.pyx  metadata.py  numpy_parser.pyx  obj_parser.pyx  policies.py  pool.py  protocol.py  query.py  segment.py  type_codes.py  util.py
cassandra/cqlengine/: columns.py  cqlengine_connection.py  cqlengine_query.py  management.py  models.py  named.py  statements.py  usertype.py
cassandra/datastax/cloud/: __init__.py  main.py
cassandra/datastax/graph/: __init__.py  ds_graph_query.py  ds_graphson.py  graph_types.py  main.py
cassandra/datastax/graph/fluent/: __init__.py  main.py
cassandra/datastax/insights/: insight_serializers.py  registry.py  reporter.py
cassandra/graph/: __init__.py  graph_query.py  graphson.py  types.py
cassandra/io/: asyncorereactor.py  libevreactor.py
cqlshlib/: authproviderhandling.py  copyutil.py  cqlhandling.py  cqlshmain.py  formatting.py
resources/: axonops-cygwin-installer.nsi
wcwidth/: __init__.py  main.py
